--- a/components/common/Navbar/Navbar.module.css
+++ b/components/common/Navbar/Navbar.module.css
@@ -11,7 +11,7 @@
 .active {
   border-top: 4px solid transparent;
   border-bottom: 4px solid rgba(82, 181, 249, 1);
-  @apply text-dark-100 font-semibold;
+  @apply text-red-400;
 }
 .active a {
   color: #e6e6e6;
