--- a/assets/base.scss
+++ b/assets/base.scss
@@ -115,3 +115,15 @@ input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #0b1f53 inset !important;
   -webkit-text-fill-color: #c5c3c3 !important;
 }
+.text-40 {
+  font-size: 40px;
+}
+.text-48 {
+  font-size: 48px;
+}
+.text-60 {
+  font-size: 60px;
+}
+.text-75 {
+  font-size: 75px;
+}
