--- a/assets/base.scss
+++ b/assets/base.scss
@@ -115,6 +115,12 @@ input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #0b1f53 inset !important;
   -webkit-text-fill-color: #c5c3c3 !important;
 }
+.text-28 {
+  font-size: 28px;
+}
+.text-36 {
+  font-size: 36px;
+}
 .text-40 {
   font-size: 40px;
 }
